--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2023/11/13"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2023/11/15"
    ]
   },
   {
@@ -76,8 +76,9 @@
    "source": [
     "# *** Mode set ***\n",
     "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "cal_mode = 2                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "f_mode = 0                              # 0: linear   1:log  in frequency\n",
+    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
@@ -98,14 +99,20 @@
    "source": [
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/'        # CDF data folder\n",
     "\n",
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID20_20231024-0042.cdf'\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
+    "data_name = 'SID20_20231024-0042.cdf'\n",
     "\n",
-    "# 202310 -- EM3 debug\n",
-    "# data_name = 'test-TMIDX/202310_EM3/cdf/SID20_Seq01.cdf'"
+    "# 202310 -- FS\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
+    "data_name = 'SID20_Seq01.cdf'\n",
+    "data_name = 'SID20_Seq02.cdf'\n",
+    "data_name = 'SID20_Seq16.cdf'\n",
+    "data_name = 'SID20_Seq18.cdf'\n",
+    "data_name = 'SID20_Seq19.cdf'\n",
+    "data_name = 'SID20_Seq20.cdf'"
    ]
   },
   {
@@ -194,10 +201,10 @@
     "        Epoch_2d[i*data.N_block[0] + j] = Epoch_1d[i] + timedelta(seconds = j/data.N_block[0])\n",
     "\n",
     "# Frequency\n",
-    "freq_1d        = data.frequency[0].tolist()\n",
-    "freq1          = freq_1d[0:N_frequency]\n",
-    "freq_width_1d  = data.freq_width[0].tolist()\n",
-    "freq_width1    = freq_width_1d[0:N_frequency]\n",
+    "freq_1d       = data.frequency[0].tolist()\n",
+    "freq1         = freq_1d[0:N_frequency]\n",
+    "freq_width_1d = data.freq_width[0].tolist()\n",
+    "freq_width1   = freq_width_1d[0:N_frequency]\n",
     "\n",
     "# Data\n",
     "EuEu_2d    = data.EuEu.reshape(n_time * data.N_block[0], N_frequency);     EuEu_2d    = EuEu_2d.transpose()\n",
@@ -212,7 +219,6 @@
     "E_ANGuv_2d = data.E_ANGuv.reshape(n_time * data.N_block[0], N_frequency);  E_ANGuv_2d = E_ANGuv_2d.transpose()\n",
     "E_ANGvw_2d = data.E_ANGvw.reshape(n_time * data.N_block[0], N_frequency);  E_ANGvw_2d = E_ANGvw_2d.transpose()\n",
     "E_ANGwu_2d = data.E_ANGwu.reshape(n_time * data.N_block[0], N_frequency);  E_ANGwu_2d = E_ANGwu_2d.transpose()\n",
-    "#\n",
     "freq_width_2d = data.freq_width.reshape(n_time * data.N_block[0], N_frequency); freq_width_2d = freq_width_2d.transpose()\n",
     "if unit_mode == 1:\n",
     "    EuEu_2d = EuEu_2d / freq_width_2d / 1000\n",
@@ -299,7 +305,7 @@
     "ax8.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = 'JUICE/RPWI HF SID-3'\n",
+    "title_label = '[JUICE/RPWI HF SID-20] ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
@@ -310,10 +316,10 @@
     "xlim=[0, N_frequency*1-1]\n",
     "xlim=[50, 60]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
-    "\"\"\"\n",
     "# range: Y-axis\n",
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
     "ax1.set_ylim(ylim)\n",
+    "\"\"\"\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    # ylim=[-10**p_raw_max, 10**p_raw_max]; ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
@@ -324,8 +330,9 @@
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_raw.png'\n",
-    "# fig.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_raw.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -454,10 +461,11 @@
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_spec.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "# fig.savefig(png_fname"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_spec.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_spec-log.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -505,10 +513,11 @@
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
     "\n",
     "plt.show()\n",
-    "png_fname = work_dir+data_name+'_FT.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_FT-log.png'\n",
-    "# fig2d.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_FT.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_FT-log.png'\n",
+    "    fig2d.savefig(png_fname)"
    ]
   },
   {
@@ -563,21 +572,22 @@
     "p8 = ax8.pcolormesh(Epoch_2d, freq1, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
     "p9 = ax9.pcolormesh(Epoch_2d, freq1, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
     "\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
+    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\")\n",
+    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\")\n",
+    "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\")\n",
+    "pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\")\n",
+    "pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\")\n",
+    "pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\")\n",
+    "pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\")\n",
+    "pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\")\n",
     "\n",
     "plt.show()\n",
-    "png_fname = work_dir+data_name+'_AngT.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_AngT-log.png'\n",
-    "# fig2d.savefig(png_fname)\n"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_AngT.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_AngT-log.png'\n",
+    "    fig2d.savefig(png_fname)\n"
    ]
   },
   {
@@ -669,10 +679,11 @@
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_spec-c.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_spec-log-c.png'\n",
-    "# fig.savefig(png_fname"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_spec-c.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_spec-log-c.png'\n",
+    "    # fig2d.savefig(png_fname)"
    ]
   },
   {
@@ -718,10 +729,11 @@
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
     "\n",
     "plt.show()\n",
-    "png_fname = work_dir+data_name+'_FT-c.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_FT-log-c.png'\n",
-    "# fig2d.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_FT-c.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_FT-log-c.png'\n",
+    "    # fig2d.savefig(png_fname)"
    ]
   }
  ],
