--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2023/11/13"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2023/11/15"
    ]
   },
   {
@@ -71,13 +71,14 @@
    "source": [
     "# *** Mode set ***\n",
     "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
+    "cal_mode = 2                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
+    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
-    "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
+    "p_raw_min = 3.5                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)\n",
@@ -93,14 +94,24 @@
    "source": [
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/'        # CDF data folder\n",
     "\n",
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID03_20231024-0036.cdf'\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
+    "data_name = 'SID03_20231024-0036.cdf'\n",
     "\n",
-    "# 202310 -- EM3 debug\n",
-    "# data_name = 'test-TMIDX/202310_EM3/cdf/SID03_Seq10.cdf'"
+    "# 202310 -- FS\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
+    "data_name = 'SID03_Seq03.cdf'\n",
+    "data_name = 'SID03_Seq04.cdf'\n",
+    "data_name = 'SID03_Seq05.cdf'\n",
+    "data_name = 'SID03_Seq10.cdf'\n",
+    "data_name = 'SID03_Seq11.cdf'\n",
+    "data_name = 'SID03_Seq12.cdf'\n",
+    "data_name = 'SID03_Seq13.cdf'\n",
+    "data_name = 'SID03_Seq14.cdf'\n",
+    "data_name = 'SID03_Seq15.cdf'\n",
+    "data_name = 'SID03_Seq17.cdf'"
    ]
   },
   {
@@ -212,35 +223,6 @@
    "outputs": [],
    "source": [
     "# *** Ver.2 ***\n",
-    "# 202309 -- EM3 debug\n",
-    "# data_name = 'SID03_20230930_hf.cdf'\n",
-    "# data_name = 'SID03_HF_20231001-0720.cdf'\n",
-    "\n",
-    "# 202308 -- EM3\n",
-    "# SEQ3 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex:1   BG_downlink:3   ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230819T161725-20230819T161725_V01___Seq3_TMIDX_00000.bin.cdf'\n",
-    "\n",
-    "# SEQ4 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex:1   BG_downlink:3  ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230819T162542-20230819T162842_V01___Seq4_TMIDX_00000.bin.cdf'\n",
-    "\n",
-    "# SEQ10 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex: 1  BG_downlink: 3 ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230821T181541-20230821T181841_V01___Seq10_TMIDX_00000.bin.cdf'\n",
-    "\n",
-    "# SEQ11 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex: 1  BG_downlink: 3 ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230821T182106-20230821T182406_V01___Seq11_TMIDX_00000.bin.cdf'\n",
-    "\n",
-    "# SEQ12 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex: 1  BG_downlink: 3 ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230821T182631-20230821T182931_V01___Seq12_TMIDX_00000.bin.cdf'\n",
-    "\n",
-    "# SEQ14 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex: 1  BG_downlink: 3 ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230821T183154-20230821T183524_V01___Seq14_TMIDX_00000.bin.cdf'\n",
-    "\n",
-    "# SEQ15 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex: 1  BG_downlink: 3 ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230821T183721-20230821T184021_V01___Seq15_TMIDX_00000.bin.cdf'\n",
-    "\n",
-    "# SEQ17 (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex: 1  BG_downlink: 3 ==> Component 9\n",
-    "# data_name = 'cdf/202308_EM3/cdf/JUICE_L1a_RPWI-HF-SID3_20230821T184246-20230821T184546_V01___Seq17_TMIDX_00000.bin.cdf'\n",
-    "\n",
     "# Tsuchiya\n",
     "# 20211114_radio_full_2D_matrix_3ch     SID-3 Table 6.2.3 SWP (Radio full), complex config=1, 3-ch mode         ***ok?***\n",
     "# (nominal spectral matrix 3-ch) <Table 6.2.4>      Ch:3 (U:1 V:1 W:1)   complex:1   BG_downlink: 0  ==> Component 9\n",
@@ -371,7 +353,6 @@
     "E_ANGuv_2d = data.E_ANGuv.transpose()\n",
     "E_ANGvw_2d = data.E_ANGvw.transpose()\n",
     "E_ANGwu_2d = data.E_ANGwu.transpose()\n",
-    "#\n",
     "freq_width_2d  = data.freq_width.transpose()\n",
     "if unit_mode == 1:\n",
     "    EuEu_2d = EuEu_2d / freq_width_2d / 1000\n",
@@ -461,7 +442,7 @@
     "ax8.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = 'JUICE/RPWI HF SID-3'\n",
+    "title_label = '[JUICE/RPWI HF SID-3] ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
@@ -472,10 +453,10 @@
     "xlim=[0, N_frequency*1-1]\n",
     "xlim=[50, 60]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
-    "\"\"\"\n",
     "# range: Y-axis\n",
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
     "ax1.set_ylim(ylim)\n",
+    "\"\"\"\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    # ylim=[-10**p_raw_max, 10**p_raw_max]; ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
@@ -486,8 +467,9 @@
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_raw.png'\n",
-    "# fig.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_raw.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -622,10 +604,11 @@
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_spec.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "# fig.savefig(png_fname"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_spec.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_spec-log.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -675,10 +658,11 @@
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
     "\n",
     "plt.show()\n",
-    "png_fname = work_dir+data_name+'_FT.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_FT-log.png'\n",
-    "# fig2d.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_FT.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_FT-log.png'\n",
+    "    fig2d.savefig(png_fname)"
    ]
   },
   {
@@ -748,10 +732,11 @@
     "pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
     "\n",
     "plt.show()\n",
-    "png_fname = work_dir+data_name+'_AngT.png'\n",
-    "if f_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_AngT-log.png'\n",
-    "# fig2d.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_AngT.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_AngT-log.png'\n",
+    "    fig2d.savefig(png_fname)"
    ]
   },
   {
