--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/10/29"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/11/16"
    ]
   },
   {
@@ -77,12 +77,14 @@
    "source": [
     "# *** Mode set ***\n",
     "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "cal_mode = 2                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
+    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
-    "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
-    "p_raw_min = 2.5                         # background: 2.5   CAL: 5\n",
+    "p_raw_max = 10.0                        # background: 7.5   CAL: 10\n",
+    "p_raw_min = 4.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)"
@@ -97,12 +99,15 @@
    "source": [
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/'        # CDF data folder\n",
     "\n",
     "# *** Ver.2 ***\n",
-    "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID05_20231024-0046.cdf'"
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
+    "data_name = 'SID05_20231024-0046.cdf'\n",
+    "\n",
+    "# 202310 -- FS\n",
+    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
+    "#data_name = 'SID05_Seq01.cdf'"
    ]
   },
   {
@@ -125,13 +130,14 @@
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid5.juice_getdata_hf_sid5(cdf)\n",
-    "date = data.epoch[0]\n",
-    "month = date.strftime('%Y%m')\n",
-    "print(data.epoch[0], \"-\", data.epoch[-1], \"[\", month, \"]\")\n",
+    "data = juice_sid5.juice_getdata_hf_sid5(cdf, cf)\n",
     "\n",
-    "data.EE = data.EE * 10**(cf/10)\n",
-    "data.EE_dB = 10.0 * np.log10(data.EE)\n",
+    "date1 = data.epoch[0]\n",
+    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]\n",
+    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2\n",
+    "print(str_date)\n",
     "\n",
     "n_freq = data.EE.shape[1]\n",
     "n_time = data.EE.shape[0]\n",
@@ -171,22 +177,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Epoch_1d = data.epoch.tolist()\n",
-    "freq_1d  = data.frequency[0].tolist()\n",
-    "freq1  = freq_1d[0:N_frequency]\n",
-    "freq_width_1d  = data.freq_width[0].tolist()\n",
-    "freq_width1  = freq_width_1d[0:N_frequency]\n",
-    "freq_width_2d = data.freq_width.transpose()\n",
+    "Epoch_1d      = data.epoch.tolist()\n",
+    "freq_1d       = data.frequency[0].tolist()\n",
+    "freq1         = freq_1d[0:N_frequency]\n",
+    "freq_width_1d = data.freq_width[0].tolist()\n",
+    "freq_width1   = freq_width_1d[0:N_frequency]\n",
     "\n",
     "EE_2d = data.EE.transpose()\n",
-    "EE_power1 = data.EE[0][0:N_frequency]\n",
-    "EE_power2 = data.EE[n_time0][0:N_frequency]\n",
+    "# EE_power1 = data.EE[0][0:N_frequency]\n",
+    "# EE_power2 = data.EE[n_time0][0:N_frequency]\n",
+    "#\n",
+    "freq_width_2d = data.freq_width.transpose()\n",
     "if unit_mode == 1:\n",
-    "    EE_2d = EE_2d / freq_width_2d / 1000 * data.subdiv_reduction[0]**0.5\n",
-    "    EE_power1 = EE_power1 / freq_width1 / 1000 * data.subdiv_reduction[0]**0.5\n",
-    "    EE_power2 = EE_power2 / freq_width1 / 1000 * data.subdiv_reduction[0]**0.5\n",
+    "    EE_2d = EE_2d / freq_width_2d / 1000 * data.subdiv_reduction[0]\n",
+    "    # EE_power1 = EE_power1 / freq_width1 / 1000 * data.subdiv_reduction[0]\n",
+    "    # EE_power2 = EE_power2 / freq_width1 / 1000 * data.subdiv_reduction[0]\n",
+    "    \"\"\"\n",
     "    print(\"frequency width:\", freq_width1[0], data.subdiv_reduction[0])\n",
-    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "f_min = freq_1d[0]\n",
     "f_max = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(cal_mode, unit_mode)"
@@ -208,41 +217,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 6))\n",
+    "fig = plt.figure(figsize=(12, 8))\n",
     "ax1 = fig.add_subplot(3, 1, 1)\n",
     "ax2 = fig.add_subplot(3, 1, 2)\n",
     "ax3 = fig.add_subplot(3, 1, 3)\n",
     "\n",
-    "ax1.plot(np.ravel(data.EE), '-r', linewidth=.5)\n",
+    "ax1.plot(np.ravel(data.EE), '-r', linewidth=.5, label='EE')\n",
     "ax1.set_yscale('log')\n",
-    "ax2.plot(np.ravel(data.frequency), '-r', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.freq_step*100), '-g', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.freq_width*100), '-b', linewidth=.5)\n",
+    "#\n",
+    "ax2.plot(np.ravel(data.frequency),      '-r', linewidth=0.6, label='frequency')\n",
+    "ax2.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*100')\n",
+    "ax2.plot(np.ravel(data.freq_width*100), ':b', linewidth=1.0, label='width*100')\n",
     "ax3.plot(np.ravel(data.epoch), '.')\n",
     "\n",
-    "ax1.set_ylabel('Power [RAW @ ADC]')\n",
+    "ax1.set_ylabel(power_str)\n",
     "ax2.set_ylabel('frequency [kHz]')\n",
     "ax3.set_ylabel('Date-Time')\n",
-    "date = data.epoch[0]\n",
-    "date = date.strftime('%Y/%m/%d')\n",
-    "ax3.set_xlabel(date)\n",
+    "ax3.set_xlabel(str_date)\n",
+    "#\n",
+    "title_label = '[JUICE/RPWI HF SID-5] ' + data_name\n",
+    "ax1.set_title(title_label);  \n",
+    "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8);\n",
     "\n",
     "\"\"\"\n",
     "# range: X-axis\n",
     "xlim=[0, N_frequency]\n",
     "ax1.set_xlim(xlim)\n",
     "ax2.set_xlim(xlim)\n",
-    "\"\"\"\n",
     "# range: Y-axis\n",
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
     "ax1.set_ylim(ylim)\n",
+    "\"\"\"\n",
     "ylim=[f_min, f_max]\n",
     "ax2.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_raw.png'\n",
-    "# fig.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_raw.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -251,7 +264,7 @@
    "id": "dccd566c",
    "metadata": {},
    "source": [
-    "## Spec LOG"
+    "## Spec"
    ]
   },
   {
@@ -261,61 +274,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sweep_num\n",
+    "n0 = 0\n",
+    "n1 = np.int16(n_time0/2)\n",
+    "n2 = n_time0\n",
+    "# X-range\n",
+    "f_min0 = f_min;  f_max0 = f_max\n",
     "# Y-range\n",
-    "p_min0 = p_min\n",
-    "p_max0 = p_max\n",
+    "p_min0 = p_min;  p_max0 = p_max\n",
     "\n",
-    "fig, cal = plt.subplots(figsize=(12, 6))\n",
-    "cal.plot(freq1, EE_power1, '-r', linewidth=.5)\n",
-    "cal.plot(freq1, EE_power2, '-b', linewidth=.5)\n",
+    "fig, cal = plt.subplots(figsize=(12, 8))\n",
     "\n",
-    "cal.set_xlabel('Frequency [kHz]')\n",
-    "cal.set_xscale('log')\n",
-    "cal.set_xlim(f_min, f_max)\n",
-    "\n",
+    "cal.plot(freq1, data.EE[n0][0:N_frequency], '-r', linewidth=1.0, label='uu init')\n",
+    "cal.plot(freq1, data.EE[n1][0:N_frequency], '-g', linewidth=1.0, label='uu half')\n",
+    "cal.plot(freq1, data.EE[n2][0:N_frequency], '-b', linewidth=1.0, label='uu end')\n",
     "cal.set_yscale('log')\n",
-    "plt.ylabel(power_str)\n",
-    "cal.set_ylim(10**p_min0, 10**p_max0)\n",
+    "if f_mode == 1:\n",
+    "    cal.set_xscale('log')\n",
+    "\n",
+    "# Label\n",
+    "cal.set_ylabel(power_str)\n",
+    "cal.set_xlabel('Frequency [kHz]')\n",
+    "#\n",
+    "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
+    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "cal.set_title(title_date)\n",
+    "cal.legend(loc='upper right', fontsize=8)\n",
+    "\n",
+    "# range: X-axis\n",
+    "xlim=[f_min0, f_max0];           cal.set_xlim(xlim)\n",
+    "# range: Y-axis\n",
+    "ylim=[10**p_min0, 10**p_max0];   cal.set_ylim(ylim)\n",
     "\n",
     "plt.show\n",
-    "png_fname = work_dir+data_name+'_spec-log.png'\n",
-    "# fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "cdca7efe",
-   "metadata": {},
-   "source": [
-    "## Spec-linear"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1597e8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Y-range\n",
-    "p_min0 = p_min\n",
-    "p_max0 = p_max\n",
-    "\n",
-    "fig, cal = plt.subplots(figsize=(12, 6))\n",
-    "cal.plot(freq1, EE_power1, '-r', linewidth=.5)\n",
-    "cal.plot(freq1, EE_power2, '-b', linewidth=.5)\n",
-    "\n",
-    "cal.set_xlabel('Frequency [kHz]')\n",
-    "cal.set_xlim(f_min, f_max)\n",
-    "\n",
-    "cal.set_yscale('log')\n",
-    "plt.ylabel(power_str)\n",
-    "cal.set_ylim(10**p_min0, 10**p_max0)\n",
-    "\n",
-    "plt.show\n",
-    "png_fname = work_dir+data_name+'_spec.png'\n",
-    "# fig.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_spec.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_spec-log.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -324,7 +322,7 @@
    "id": "637c35b8",
    "metadata": {},
    "source": [
-    "## FT - LOG"
+    "## FT"
    ]
   },
   {
@@ -334,75 +332,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_min0 = p_min\n",
-    "p_max0 = p_max\n",
+    "# Y-range\n",
+    "f_min0 = f_min;      f_max0 = f_max\n",
+    "# Z-range\n",
+    "p_min0 = p_min;      p_max0 = p_max\n",
     "\n",
-    "fig2d = plt.figure(figsize=[12,3])\n",
+    "fig2d = plt.figure(figsize=[12,8])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1)\n",
     "\n",
     "# Y-axis\n",
-    "ax1.set_ylim(f_min, f_max)\n",
-    "ax1.set_yscale('log')\n",
+    "ax1.set_ylim(f_min0, f_max0)\n",
+    "if f_mode == 1:\n",
+    "    ax1.set_yscale('log')\n",
     "ax1.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
     "ax1.set_title('EE')\n",
-    "date = data.epoch[0]\n",
-    "date = date.strftime('%Y/%m/%d')\n",
-    "ax1.set_xlabel(date)\n",
+    "ax1.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
     "p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
-    "pp1.set_label(power_str)\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
     "\n",
     "plt.show()\n",
-    "png_fname = work_dir+data_name+'_FT-log.png'\n",
-    "# fig2d.savefig(png_fname)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "d0d979f8",
-   "metadata": {},
-   "source": [
-    "## FT - linear"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "542c5749",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p_min0 = p_min\n",
-    "p_max0 = p_max\n",
-    "\n",
-    "fig2d = plt.figure(figsize=[12,3])\n",
-    "ax1 = fig2d.add_subplot(1, 1, 1)\n",
-    "\n",
-    "# Y-axis\n",
-    "ax1.set_ylim(f_min, f_max)\n",
-    "ax1.set_ylabel('f [kHz]')\n",
-    "\n",
-    "# X-axis\n",
-    "ax1.set_title('EE')\n",
-    "date = data.epoch[0]\n",
-    "date = date.strftime('%Y/%m/%d')\n",
-    "ax1.set_xlabel(date)\n",
-    "\n",
-    "# Plot\n",
-    "p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
-    "\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
-    "pp1.set_label(power_str)\n",
-    "\n",
-    "plt.show()\n",
-    "png_fname = work_dir+data_name+'_FT.png'\n",
-    "# fig2d.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_FT.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_FT-log.png'\n",
+    "    fig2d.savefig(png_fname)\n"
    ]
   }
  ],
