--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -230,7 +230,7 @@
     "ax5.set_xlim(xlim)\n",
     "ax7.set_xlim(xlim)\n",
     "# xlim=[128 * data.N_feed[0] * 45 * 24, 128 * data.N_feed[0] * 45 * 24 + 10000]\n",
-    "# xlim=[3.6e6, 3.62e6]\n",
+    "xlim=[3.6e6, 3.605e6]\n",
     "print(xlim)\n",
     "ax2.set_xlim(xlim)\n",
     "ax4.set_xlim(xlim)\n",
