--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/10/29"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/11/17"
    ]
   },
   {
@@ -48,7 +48,6 @@
     "# The latest CDF library https://spdf.gsfc.nasa.gov/pub/software/cdf/dist/latest/\n",
     "from spacepy import pycdf\n",
     "\n",
-    "# os.environ[\"CDF_LIB\"] = \"C:\\\\Program Files\\\\CDF_Distribution\\\\cdf39_0-dist\\\\lib\"\n",
     "import os\n",
     "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_0-dist/lib\"\n",
     "\n",
@@ -78,6 +77,8 @@
     "# *** Mode set ***\n",
     "unit_mode = 0                           # 0: sum    1: /Hz\n",
     "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
+    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
@@ -85,7 +86,8 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)"
+    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
    ]
   },
   {
@@ -96,13 +98,16 @@
    "outputs": [],
    "source": [
     "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/'        # CDF data folder\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'                         # Plot dump folder\n",
     "\n",
     "# *** Ver.2 ***\n",
-    "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID22_20231024-0049.cdf'"
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
+    "data_name = 'SID22_20231024-0049.cdf'\n",
+    "\n",
+    "# 202310 -- FS\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'    # CDF data folder\n",
+    "data_name = 'SID22_Seq06.cdf'\n"
    ]
   },
   {
@@ -125,16 +130,18 @@
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid22.juice_getdata_hf_sid22(cdf)\n",
-    "date = data.epoch[0]\n",
-    "month = date.strftime('%Y%m')\n",
-    "print(data.epoch[0], \"-\", data.epoch[-1], \"[\", month, \"]\")\n",
+    "data = juice_sid22.juice_getdata_hf_sid22(cdf, cf)\n",
+    "\n",
+    "date1 = data.epoch[0]\n",
+    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]\n",
+    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2\n",
+    "print(str_date)\n",
     "\n",
     "n_time = data.auto_corr.shape[0]\n",
     "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]\n",
-    "\n",
-    "data.auto_corr = data.auto_corr * 10**(cf/10)"
+    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]"
    ]
   },
   {
@@ -165,37 +172,34 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(12, 10))\n",
-    "ax1 = fig.add_subplot(4, 1, 1)\n",
-    "ax2 = fig.add_subplot(4, 1, 2)\n",
-    "ax3 = fig.add_subplot(4, 1, 3)\n",
+    "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3)\n",
     "\n",
-    "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.freq_auto_corr[:]), linewidth=.5)\n",
+    "ax1.plot(np.ravel(data.auto_corr[:][:]),   linewidth=.5, label='auto_corr')\n",
+    "ax2.plot(np.ravel(data.freq_auto_corr[:]), linewidth=.5, label='frequency')\n",
     "ax3.plot(np.ravel(data.epoch[:]), '.')\n",
-    "ax1.set_ylabel('AutoCorr [RAW @ ADC]')\n",
+    "ax1.set_ylabel('AutoCorr')\n",
     "ax2.set_ylabel('Frequency [kHz]')\n",
-    "date = data.epoch[0]\n",
-    "date = date.strftime('%Y/%m/%d')\n",
-    "ax3.set_xlabel(date)\n",
+    "ax3.set_ylabel('Date-Time')\n",
+    "ax3.set_xlabel(str_date)\n",
+    "#\n",
+    "title_label = '[JUICE/RPWI HF SID-22]  ' + data_name\n",
+    "ax1.set_title(title_label)\n",
+    "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "\"\"\"\n",
     "# range: X-axis\n",
     "xlim=[0, N_frequency-1]\n",
     "ax1.set_xlim(xlim)\n",
-    "ax2.set_xlim(xlim)\n",
-    "ax3.set_xlim(xlim)\n",
     "# range: Y-axis\n",
-    "ylim=[10**p_raw_min, 10**p_raw_max]\n",
+    "ylim=[10**p_min0, 10**p_max0]\n",
     "ax1.set_ylim(ylim)\n",
-    "ax2.set_ylim(ylim)\n",
-    "ylim=[f_min, f_max]\n",
-    "ax3.set_ylim(ylim)\n",
     "\"\"\"\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_raw.png'\n",
-    "# fig.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_raw.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -203,7 +207,7 @@
    "id": "a2b60696",
    "metadata": {},
    "source": [
-    "# First data"
+    "## First data"
    ]
   },
   {
@@ -215,23 +219,11 @@
    "source": [
     "n_sweep = 0\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 12))\n",
-    "ax1 = fig.add_subplot(4, 4, 1)\n",
-    "ax2 = fig.add_subplot(4, 4, 2)\n",
-    "ax3 = fig.add_subplot(4, 4, 3)\n",
-    "ax4 = fig.add_subplot(4, 4, 4)\n",
-    "ax5 = fig.add_subplot(4, 4, 5)\n",
-    "ax6 = fig.add_subplot(4, 4, 6)\n",
-    "ax7 = fig.add_subplot(4, 4, 7)\n",
-    "ax8 = fig.add_subplot(4, 4, 8)\n",
-    "ax9 = fig.add_subplot(4, 4, 9)\n",
-    "ax10 = fig.add_subplot(4, 4, 10)\n",
-    "ax11 = fig.add_subplot(4, 4, 11)\n",
-    "ax12 = fig.add_subplot(4, 4, 12)\n",
-    "ax13 = fig.add_subplot(4, 4, 13)\n",
-    "ax14 = fig.add_subplot(4, 4, 14)\n",
-    "ax15 = fig.add_subplot(4, 4, 15)\n",
-    "ax16 = fig.add_subplot(4, 4, 16)\n",
+    "fig = plt.figure(figsize=(12, 14))\n",
+    "ax1  = fig.add_subplot(4, 4, 1);  ax2  = fig.add_subplot(4, 4, 2);   ax3  = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
+    "ax5  = fig.add_subplot(4, 4, 5);  ax6  = fig.add_subplot(4, 4, 6);   ax7  = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
+    "ax9  = fig.add_subplot(4, 4, 9);  ax10 = fig.add_subplot(4, 4, 10);  ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
+    "ax13 = fig.add_subplot(4, 4, 13); ax14 = fig.add_subplot(4, 4, 14);  ax15 = fig.add_subplot(4, 4, 15); ax16 = fig.add_subplot(4, 4, 16)\n",
     "\n",
     "ax1.plot(data.time[1:], data.auto_corr[n_sweep][0][1:], linewidth=.5)\n",
     "ax2.plot(data.time[1:], data.auto_corr[n_sweep][1][1:], linewidth=.5)\n",
@@ -250,73 +242,10 @@
     "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
     "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
-    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
-    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
-    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
-    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
-    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
-    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
-    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
-    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
-    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
-    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
-    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
-    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
-    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
-    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
-    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
-    "ax16.set_xlabel(\"#16v {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
-    "\n",
-    "# Plot\n",
-    "fig.show\n",
-    "png_fname = work_dir+data_name+'_1st.png'\n",
-    "# fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "675db0ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_sweep = n_time0\n",
-    "\n",
-    "fig = plt.figure(figsize=(12, 12))\n",
-    "ax1 = fig.add_subplot(4, 4, 1)\n",
-    "ax2 = fig.add_subplot(4, 4, 2)\n",
-    "ax3 = fig.add_subplot(4, 4, 3)\n",
-    "ax4 = fig.add_subplot(4, 4, 4)\n",
-    "ax5 = fig.add_subplot(4, 4, 5)\n",
-    "ax6 = fig.add_subplot(4, 4, 6)\n",
-    "ax7 = fig.add_subplot(4, 4, 7)\n",
-    "ax8 = fig.add_subplot(4, 4, 8)\n",
-    "ax9 = fig.add_subplot(4, 4, 9)\n",
-    "ax10 = fig.add_subplot(4, 4, 10)\n",
-    "ax11 = fig.add_subplot(4, 4, 11)\n",
-    "ax12 = fig.add_subplot(4, 4, 12)\n",
-    "ax13 = fig.add_subplot(4, 4, 13)\n",
-    "ax14 = fig.add_subplot(4, 4, 14)\n",
-    "ax15 = fig.add_subplot(4, 4, 15)\n",
-    "ax16 = fig.add_subplot(4, 4, 16)\n",
-    "\n",
-    "ax1.plot(data.time[1:], data.auto_corr[n_sweep][0][1:], linewidth=.5)\n",
-    "ax2.plot(data.time[1:], data.auto_corr[n_sweep][1][1:], linewidth=.5)\n",
-    "ax3.plot(data.time[1:], data.auto_corr[n_sweep][2][1:], linewidth=.5)\n",
-    "ax4.plot(data.time[1:], data.auto_corr[n_sweep][3][1:], linewidth=.5)\n",
-    "ax5.plot(data.time[1:], data.auto_corr[n_sweep][4][1:], linewidth=.5)\n",
-    "ax6.plot(data.time[1:], data.auto_corr[n_sweep][5][1:], linewidth=.5)\n",
-    "ax7.plot(data.time[1:], data.auto_corr[n_sweep][6][1:], linewidth=.5)\n",
-    "ax8.plot(data.time[1:], data.auto_corr[n_sweep][7][1:], linewidth=.5)\n",
-    "ax9.plot(data.time[1:], data.auto_corr[n_sweep][8][1:], linewidth=.5)\n",
-    "ax10.plot(data.time[1:], data.auto_corr[n_sweep][9][1:], linewidth=.5)\n",
-    "ax11.plot(data.time[1:], data.auto_corr[n_sweep][10][1:], linewidth=.5)\n",
-    "ax12.plot(data.time[1:], data.auto_corr[n_sweep][11][1:], linewidth=.5)\n",
-    "ax13.plot(data.time[1:], data.auto_corr[n_sweep][12][1:], linewidth=.5)\n",
-    "ax14.plot(data.time[1:], data.auto_corr[n_sweep][13][1:], linewidth=.5)\n",
-    "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
-    "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
-    "\n",
+    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
+    "title_date = date1\n",
+    "ax1.set_title(title_date)\n",
+    "#\n",
     "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
     "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
     "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
@@ -336,8 +265,142 @@
     "\n",
     "# Plot\n",
     "fig.show\n",
-    "png_fname = work_dir+data_name+'_last.png'\n",
-    "# fig.savefig(png_fname)"
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_1st.png'\n",
+    "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mid Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sweep = np.int16(n_time0/2)\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 14))\n",
+    "ax1  = fig.add_subplot(4, 4, 1);  ax2  = fig.add_subplot(4, 4, 2);   ax3  = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
+    "ax5  = fig.add_subplot(4, 4, 5);  ax6  = fig.add_subplot(4, 4, 6);   ax7  = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
+    "ax9  = fig.add_subplot(4, 4, 9);  ax10 = fig.add_subplot(4, 4, 10);  ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
+    "ax13 = fig.add_subplot(4, 4, 13); ax14 = fig.add_subplot(4, 4, 14);  ax15 = fig.add_subplot(4, 4, 15); ax16 = fig.add_subplot(4, 4, 16)\n",
+    "\n",
+    "ax1.plot(data.time[1:], data.auto_corr[n_sweep][0][1:], linewidth=.5)\n",
+    "ax2.plot(data.time[1:], data.auto_corr[n_sweep][1][1:], linewidth=.5)\n",
+    "ax3.plot(data.time[1:], data.auto_corr[n_sweep][2][1:], linewidth=.5)\n",
+    "ax4.plot(data.time[1:], data.auto_corr[n_sweep][3][1:], linewidth=.5)\n",
+    "ax5.plot(data.time[1:], data.auto_corr[n_sweep][4][1:], linewidth=.5)\n",
+    "ax6.plot(data.time[1:], data.auto_corr[n_sweep][5][1:], linewidth=.5)\n",
+    "ax7.plot(data.time[1:], data.auto_corr[n_sweep][6][1:], linewidth=.5)\n",
+    "ax8.plot(data.time[1:], data.auto_corr[n_sweep][7][1:], linewidth=.5)\n",
+    "ax9.plot(data.time[1:], data.auto_corr[n_sweep][8][1:], linewidth=.5)\n",
+    "ax10.plot(data.time[1:], data.auto_corr[n_sweep][9][1:], linewidth=.5)\n",
+    "ax11.plot(data.time[1:], data.auto_corr[n_sweep][10][1:], linewidth=.5)\n",
+    "ax12.plot(data.time[1:], data.auto_corr[n_sweep][11][1:], linewidth=.5)\n",
+    "ax13.plot(data.time[1:], data.auto_corr[n_sweep][12][1:], linewidth=.5)\n",
+    "ax14.plot(data.time[1:], data.auto_corr[n_sweep][13][1:], linewidth=.5)\n",
+    "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
+    "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
+    "\n",
+    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Mid: %Y/%m/%d %R:%S')\n",
+    "title_date = date1\n",
+    "ax1.set_title(title_date)\n",
+    "#\n",
+    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
+    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
+    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
+    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
+    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
+    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
+    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
+    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
+    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
+    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
+    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
+    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
+    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
+    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
+    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
+    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
+    "\n",
+    "# Plot\n",
+    "fig.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_mid.png'\n",
+    "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Last data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "675db0ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sweep = n_time0\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 14))\n",
+    "ax1  = fig.add_subplot(4, 4, 1);  ax2  = fig.add_subplot(4, 4, 2);   ax3  = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
+    "ax5  = fig.add_subplot(4, 4, 5);  ax6  = fig.add_subplot(4, 4, 6);   ax7  = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
+    "ax9  = fig.add_subplot(4, 4, 9);  ax10 = fig.add_subplot(4, 4, 10);  ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
+    "ax13 = fig.add_subplot(4, 4, 13); ax14 = fig.add_subplot(4, 4, 14);  ax15 = fig.add_subplot(4, 4, 15); ax16 = fig.add_subplot(4, 4, 16)\n",
+    "\n",
+    "ax1.plot(data.time[1:], data.auto_corr[n_sweep][0][1:], linewidth=.5)\n",
+    "ax2.plot(data.time[1:], data.auto_corr[n_sweep][1][1:], linewidth=.5)\n",
+    "ax3.plot(data.time[1:], data.auto_corr[n_sweep][2][1:], linewidth=.5)\n",
+    "ax4.plot(data.time[1:], data.auto_corr[n_sweep][3][1:], linewidth=.5)\n",
+    "ax5.plot(data.time[1:], data.auto_corr[n_sweep][4][1:], linewidth=.5)\n",
+    "ax6.plot(data.time[1:], data.auto_corr[n_sweep][5][1:], linewidth=.5)\n",
+    "ax7.plot(data.time[1:], data.auto_corr[n_sweep][6][1:], linewidth=.5)\n",
+    "ax8.plot(data.time[1:], data.auto_corr[n_sweep][7][1:], linewidth=.5)\n",
+    "ax9.plot(data.time[1:], data.auto_corr[n_sweep][8][1:], linewidth=.5)\n",
+    "ax10.plot(data.time[1:], data.auto_corr[n_sweep][9][1:], linewidth=.5)\n",
+    "ax11.plot(data.time[1:], data.auto_corr[n_sweep][10][1:], linewidth=.5)\n",
+    "ax12.plot(data.time[1:], data.auto_corr[n_sweep][11][1:], linewidth=.5)\n",
+    "ax13.plot(data.time[1:], data.auto_corr[n_sweep][12][1:], linewidth=.5)\n",
+    "ax14.plot(data.time[1:], data.auto_corr[n_sweep][13][1:], linewidth=.5)\n",
+    "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
+    "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
+    "\n",
+    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Last: %Y/%m/%d %R:%S')\n",
+    "title_date = date1\n",
+    "ax1.set_title(title_date)\n",
+    "#\n",
+    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
+    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
+    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
+    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
+    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
+    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
+    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
+    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
+    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
+    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
+    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
+    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
+    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
+    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
+    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
+    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
+    "\n",
+    "# Plot\n",
+    "fig.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_last.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   }
  ],
